# ArchLink

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER_README.md  Dockerfile  INTRODUCTION.md  PROJECT_OVERVIEW.md  check_ec2_deployment.ps1  deploy_to_aws.md  docker-compose.yml  readme.md  split_spec_files.py  test_page_number_fix.py  test_page_pattern.py  test_page_recognition_capability.py  面接プロジェクト紹介.md  页码识别能力分析.md
rag_demo/: .gitignore  EXECUTOR_GUIDE.md  README.md  agentic_rag_test.ipynb  anliku_executor.py  base.py  construction_executor.py  delete_collection.py  embeddings.py  executor.py  guifan_executor.py  load_splits.py  load_splits_anliku.py  load_splits_guifan.py  loaders.py  main.py  main_executor.py  processors.py  pyproject.toml  query_example.py
spec_locator/: .env.example  AWS_README.md  CLOUD_AND_API.md  COMPLETION_REPORT.md  CONFIG_GUIDE.md  DEMO_USAGE.md  DEPLOYMENT_READINESS_CHECK.md  DEVELOPMENT.md  ERROR_HANDLING_ENHANCEMENT.md  ERROR_HANDLING_README.md  FILE_NAVIGATION.md  FRONTEND_INTEGRATION_GUIDE.md  INSTALL.md  LLM_API_DOCS.md  LLM_INTEGRATION_DESIGN.md  LLM_INTEGRATION_GUIDE.md  LLM_README.md  MULTI_LLM_GUIDE.md  P0_IMPLEMENTATION_REPORT.md  P1_IMPLEMENTATION_REPORT.md  PADDLEOCR_FIX.md  PADDLE_COMPATIBILITY_FIX.md  PAGE_CODE_ANCHOR_DEV.md  PDF_PREVIEW_FIX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.py  README_DEV.md  UV_GUIDE.md  UV_INSTALL_READY.md  design.md  examples.py  install.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.bat  setup.sh  start_demo.bat  start_server.py  (+3 more)
spec_locator/api/: __init__.py  demo.html  server.py
spec_locator/api/static/: index.html
spec_locator/config/: __init__.py  config.py
spec_locator/core/: __init__.py  pipeline.py
spec_locator/database/: __init__.py  file_index.py
spec_locator/llm/: __init__.py  base_engine.py  chatgpt_engine.py  doubao_engine.py  gemini_engine.py  prompt_templates.py  response_parser.py
spec_locator/ocr/: __init__.py  ocr_engine.py
spec_locator/parser/: __init__.py  geometry.py  page_code.py  spec_code.py
spec_locator/postprocess/: __init__.py  confidence.py
spec_locator/preprocess/: __init__.py  image_preprocess.py
spec_locator/tests/: __init__.py  test_error_handling_enhancement.py  test_geometry.py  test_spec_code.py  test_spec_code_with_letter_prefix.py
