[project]
name = "langgraphtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-deepseek>=0.1.4",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langsmith>=0.4.28",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas",
    "pypdf>=6.1.2",
    "python-dotenv>=1.1.1",
    "socksio>=1.0.0",
    "volcengine-python-sdk>=4.0.36",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
